# cassda-zertifikatsarbeit

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: CH_wildlife_crossings.geojson  DE_wildlife_crossings.geojson  de_wildlife_crossing.geojson  response_overpass_API_request_DE.txt
data/Wildtierpassagen.gdb/: a00000001.freelist  a00000004.freelist  a00000004.spx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000006.CatRelsByDestinationID.atx  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.CatRelTypesByOriginItemTypeID.atx  a00000007.gdbtable  a00000007.gdbtablx  a0000000d.gdbtablx  a0000000d.horizon  a0000000e.gdbtable
data/combined_wildlife_poly_bridges_filtered-yolo/: data.yaml
data/combined_wildlife_poly_bridges_filtered_no_ch_640-yolo/: data.yaml
data/geodata/: Digitizing_Overpasses.gpkg  Digitizing_Overpasses.qgz  Export_Box_on_Highway.json  (+4 more)
notebooks/: OSM_download_points&box_on_streets.fmw  ch_crossing_export.ipynb  comapre_OSM_and_opendata.fmw  combine_KMorelle_and_our_wildlife_crossings.fmw  de_crossing_export.ipynb  download-germany.ipynb  download-switzerland.ipynb  export-background-imgs.ipynb  generic_data_download.ipynb  generic_download_widllife_crossings_OSM.ipynb  generic_download_widllife_crossings_streets_OSM.ipynb  generic_download_wildlife_crossings_streets_OSM.ipynb  overpass_API_request_DE.txt  plot-dataset.ipynb  prepare_yolo_dataset.ipynb  remove-ch-from-trainingdata.ipynb  split_dataset.ipynb  train-yolo-model.ipynb  walk_streets.ipynb
(+1828 files in other folders)
