[project]
name = "cassda-zertifikatsarbeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "owslib>=0.34.1",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]
